--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "bamazon",
   "main": "bamazonCustomer.js",
   "dependencies": {
-    "inquirer": "^3.3.0"
+    "cli-table": "^0.3.1",
+    "inquirer": "^3.3.0",
+    "mysql": "^2.15.0"
   },
   "devDependencies": {},
   "scripts": {
